@@ -13,4 +13,4 @@ EXPOSE 8080
 RUN mkdir /app
 
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/workshift-system.jar
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/workshift-system.jar"]
+ENTRYPOINT ["java", "-XX:MinRAMPercentage=100.0", "-XX:MaxRAMPercentage=100.0", "-jar", "/app/workshift-system.jar"]
